fix on channel pannel spacing

--- a/app/assets/stylesheets/catarse_bootstrap/pages/channels/profiles/new.sass
+++ b/app/assets/stylesheets/catarse_bootstrap/pages/channels/profiles/new.sass
@@ -2,7 +2,7 @@
   color: $blue-one
   font-size: 2.2em
   line-height: 1em
-  margin-top: 0
+  margin: 0
 
 .channel-description
   color: $blue-two
@@ -17,12 +17,12 @@
 .curator-image
   background: #FFFFFF
   border: 5px solid #FFFFFF
-  border-radius: 50%
+  border-radius: 4px
   box-shadow: 0 0 1px #000000, 0 0 0 #000000 inset
   padding: 0
 
 .curator-name
-  margin: 0 0 .5em
+  margin: 0 0 .2em
   font-size: 1.2em
 
 .curator-caption
